src/components/messages/NewChat/NewChat.scss
.NewChat {
  &__mobile-header {
    display: flex;
    flex-direction: column;
    gap: 1.125em;
  }
  &__search-box {
    width: 100%;
    position: relative;
    display: flex;
    align-items: center;
    gap: 1em;
    @media screen and (max-width: 700px) {
      justify-content: space-between;
    }

    .Button:disabled {
      white-space: nowrap;
      background-color: var(--sender-bubble-bg);
      border-color: var(--border-color-2);
      color: var(--fg-color-3);
    }

    .SearchSuggestions {
      position: absolute;
      width: 90%;
      top: 300%;
      left: 5%;
    }

    &__actions {
      display: flex;
      align-items: center;
      gap: 1.25em;
      &__invite {
        background-color: var(--accent-color-1);
        &:disabled {
          background-color: var(--bg-color-2);
          border-color: var(--border-color-2);
        }
      }
    }

    .Input {
      width: 80%;
    }
  }
  &__input-container {
    padding: 0 calc(1.25em - 0.4em);
  }
}

@media only screen and (min-width: 700px) {
  .NewChat {
    .SearchSuggestions {
      top: 125%;
      left: unset;
    }
  }
}

